feat/TRAIN-2928_add-forgot/reset-password-flow-resend-email-integration-/auth/me-endpoint-and-update-docs
